calendly widget fix

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -36,6 +36,7 @@ const currentPath = Astro.url.pathname;
     <meta property="twitter:description" content={twitterDescription} />
     <meta property="twitter:image" content={twitterImage} />
     <title>{title} | Gunpoint Tattoo Studio</title>
+    <link rel="icon" type="image/webp" href="/logo.webp" />
     <Schema/>
 </head>
 <body class="bg-background text-text-main">
