--- a/src/components/Schema.astro
+++ b/src/components/Schema.astro
@@ -45,7 +45,7 @@ const schemas = locations.map((location) => {
         priceRange: '$$',
         slogan: 'Crafting unique tattoo experiences.',
         logo: `${websiteUrl}/logo.webp`,
-        description: `Experience custom tattoos and piercings at ${location.displayName}.`,
+        description: `Experience premium custom tattoos, fine-line designs, and expert cover-ups at ${location.displayName}. Specializing in unique artistry and safe piercing services.`,
         sameAs: [
             'https://www.facebook.com/p/Gun-Point-Tattoo-Studios-100063521092954',
             'https://www.instagram.com/gunpoint_tattoostudio',
